--- a/Company_Bankruptcy_Prediction.ipynb
+++ b/Company_Bankruptcy_Prediction.ipynb
@@ -4825,13 +4825,7 @@
       "150/150 [==============================] - 0s 584us/step - loss: 0.1025 - accuracy: 0.9665\n",
       "Epoch 78/200\n",
       "150/150 [==============================] - 0s 589us/step - loss: 0.1020 - accuracy: 0.9661\n",
-      "Epoch 79/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 79/200\n",
       "150/150 [==============================] - 0s 628us/step - loss: 0.1019 - accuracy: 0.9663\n",
       "Epoch 80/200\n",
       "150/150 [==============================] - 0s 579us/step - loss: 0.1025 - accuracy: 0.9663\n",
@@ -5652,19 +5646,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "_______\n",
+    "\n",
     "**<span style=\"color:#034235;\"> Thanks for reading this post. </span>**\n",
     "\n",
-    "_______\n",
     "_Make by_**<span style=\"color:#034235;\"> Lucas,</span>**\n",
+    "\n",
+    "_______\n",
     "### <p style=\"padding:5px;background-color:#034235;margin:0;color:#ffe7a0;font-family:newtimeroman;font-size:150%;text-align:center;border-radius: 20px;overflow:hidden;font-weight:900\">END</p>\n",
-    "______\n",
+    "\n",
+    "<p align=\"center\">\n",
     "<img src=\"https://github.com/LeHongNgoc3820/Lucas_viet_Blog/blob/b5e2de5a812292889e793b719572d06f3ababf2d/Logo%20ta%CC%81ch%20ne%CC%82%CC%80n.png?raw=true\"\n",
-    "     style=\"width:200px;height:200px;\">\n",
+    "     style=\"width:200px;height:200px;\" display = \"block;\">\n",
+    "</p>\n",
     "\n",
     "**<span style=\"color:#034235;\"> You can contact with me on:</span>**\n",
     "+ **Gmail**: lehongngoc.work@gmail.com\n",
     "+ **GitHub**: [LeHongNgoc3820](https://github.com/LeHongNgoc3820)\n",
-    "+ **Linkedln**: [Ngoc Le Hong](https://www.linkedin.com/in/ngoc-le-hong-44131b21a/)"
+    "+ **Linkedln**: [Ngoc Le Hong](https://www.linkedin.com/in/ngoc-le-hong-44131b21a/)\n",
+    "\n",
+    "_______"
    ]
   },
   {
